--- a/RealEstateManager.DataAccess/RealEstateManager.DataAccess.csproj
+++ b/RealEstateManager.DataAccess/RealEstateManager.DataAccess.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RealEstateManager.Database\RealEstateManager.Database.csproj" />
+  </ItemGroup>
+
 </Project>
